# devops-test

./: README.MD
.github/workflows/: ci.yml  ci.yml.no-comments
lib1/: Cargo.toml
lib2/: Cargo.toml
lib3/: Cargo.toml
scripts/: do-collection.sh
