[package]
name = "lib2"
version = "0.1.0"
edition = "2021"
license = "MIT OR Apache-2.0"
description = "Technical Task Build"
repository = "https://github.com/beaver-X-beaver/devops-test"
authors = ["Babur Ayanlar <ba.ayanlar@gmail.com>"]

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html
[lib]
crate-type = ["cdylib", "rlib"]

[dependencies]
